# bups-engine

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
scripts/: generate-icon.cjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude.rs  main.rs
src/components/: AssetBrowser.tsx  Chat.tsx  Editor.tsx  EngineViewport.tsx  ExportDialog.tsx  FileTree.tsx  Hierarchy.tsx  HotReloadStatus.tsx  Inspector.tsx  Viewport.tsx
src/engine/: Engine.ts  index.ts
src/engine/ai/: ContextBuilder.ts  README.md
src/engine/assets/: AssetManager.ts  index.ts
src/engine/audio/: AudioSystem.ts  index.ts
src/engine/core/: Camera.ts  Light.ts  MeshRenderer.ts  Transform.ts  index.ts
src/engine/ecs/: Component.ts  Entity.ts  System.ts  World.ts  index.ts
src/engine/editor/: CommandHistory.ts  TransformGizmo.ts  index.ts
src/engine/export/: Exporter.ts
src/engine/input/: InputManager.ts  index.ts
src/engine/physics/: PhysicsSystem.ts  RigidBody.ts  index.ts
src/engine/rendering/: RenderSystem.ts  index.ts
src/engine/scripting/: HotReload.ts  HotReloadExample.ts  README_HotReload.md  ScriptComponent.ts  index.ts
src/engine/serialization/: ProjectManager.ts  SceneSerializer.ts  index.ts
src/hooks/: index.ts  useSceneManager.ts
src/stores/: assetStore.ts  chatStore.ts  engineStore.ts  historyStore.ts  projectStore.ts  sceneStore.ts
