[package]
name = "bups-engine"
version = "0.1.0"
description = "AI-powered 3D game engine with Claude integration"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "path-all", "process-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Only include needed tokio features to reduce binary size
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros", "fs"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
